[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/ScrollingTextPanel/ScrollingTextPanel.gd" type="Script" id=1]
[ext_resource path="res://Themes/Fonts/markazi_text_24pt.tres" type="DynamicFont" id=5]
[ext_resource path="res://Themes/HiddenScrollBar.tres" type="Theme" id=6]
[ext_resource path="res://Themes/Main.tres" type="Theme" id=7]
[ext_resource path="res://Themes/StyleBoxes/GraySquareStyleBox.tres" type="StyleBox" id=8]

[node name="ScrollingTextPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
max_speed_down = 1.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollResetTimer" type="Timer" parent="."]
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 352
custom_constants/margin_left = 352
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_left = 352.0
margin_right = 928.0
margin_bottom = 720.0
theme = ExtResource( 6 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer"]
margin_right = 576.0
margin_bottom = 31.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -86.0
margin_right = -48.0
margin_bottom = -48.0
focus_mode = 0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ScrollResetTimer" to="." method="_on_ScrollResetTimer_timeout"]
[connection signal="scroll_ended" from="MarginContainer/ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="gui_input" from="MarginContainer/ScrollContainer/RichTextLabel" to="." method="_on_RichTextLabel_gui_input"]
[connection signal="meta_clicked" from="MarginContainer/ScrollContainer/RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
